--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,19 @@ a {
     color-scheme: dark;
   }
 }
+.loading{
+  width: 100px;
+  height: 100px;
+  border: 5px solid rgb(181, 181, 181);
+  border-top-color: rgb(255, 0, 0);
+  border-radius: 50%;
+  animation: spin 1.5s linear infinite;
+}
+@keyframes spin {
+  0%{
+      transform: rotate(0deg);
+  }
+  100%{
+      transform: rotate(360deg);
+  }
+}
