--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
 html,
 body {
   max-width: 100vw; 
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
